--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -31,6 +31,11 @@ body {
 #menuToggle {
   display: block;
   position: relative;
+  top: 33px;
+  right: 33px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 #menuToggle a {
@@ -59,11 +64,10 @@ body {
 #menuToggle span {
   display: block;
   width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
+  height: 2px;
+  margin-bottom: 8px;
   position: relative;
-  background: #cdcdcd;
-  border-radius: 3px;
+  background: white;
   z-index: 1;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
@@ -89,20 +93,21 @@ body {
 }
 
 #menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
+  transform: rotate(-45deg) translate(0, -2px);
 }
 
 #menu {
   position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -250px;
-  padding: 50px;
-  padding-top: 125px;
-  background: #ededed;
+  width: 170px;
+  margin: -100px 0 0 -105px;
+  padding: 40px;
+  padding-top: 110px;
+  background: white;
   list-style-type: none;
+  text-align: right;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
-  transform: translate(100%, 0);
+  transform: translate(0, -100%);
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 
