--- a/src/Style/_header.sass
+++ b/src/Style/_header.sass
@@ -22,9 +22,8 @@
 #menuToggle
     display: block
     position: relative
-//   top: 50px
-//   left: 50px
-    padding: 50px
+    top: 33px
+    right: 33px
     z-index: 1
     -webkit-user-select: none
     user-select: none
@@ -56,11 +55,11 @@
 #menuToggle span
     display: block
     width: 33px
-    height: 4px
-    margin-bottom: 5px
+    height: 2px
+    margin-bottom: 8px
     position: relative
-    background: #cdcdcd
-    border-radius: 3px
+    background: white
+    // border-radius: 3px
     z-index: 1
     transform-origin: 4px 0px
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease
@@ -87,20 +86,21 @@
 
 
 #menuToggle input:checked ~ span:nth-last-child(2)
-    transform: rotate(-45deg) translate(0, -1px)
+    transform: rotate(-45deg) translate(0, -2px)
 
 
 #menu
     position: absolute
-    width: 300px
-    margin: -100px 0 0 -250px
-    padding: 50px
-    padding-top: 125px
-    background: #ededed
+    width: 170px
+    margin: -100px 0 0 -105px
+    padding: 40px
+    padding-top: 110px
+    background: white
     list-style-type: none
+    text-align: right
     -webkit-font-smoothing: antialiased
     transform-origin: 0% 0%
-    transform: translate(100%, 0)
+    transform: translate(0, -100%)
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
 
 
