--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -1,3 +1,8 @@
+// VARIABLES
+$bp-mobile: 480px
+$bp-tablet: 800px
+  
+  
 *
     box-sizing: border-box
 
@@ -5,6 +10,19 @@ body
   text-align: center
   color: white
   background-color: rgb(39, 51, 107)
+  background: url('../Media/Nupar.jpg') center 
+  background-repeat: no-repeat
+  object-fit: contain
+  background-size: 400vh auto
+  background-position: 63.5% 
+// @media (max-width: $bp-mobile)
+//   body
+//       background-position: -2800px
+// @media (max-width: $bp-tablet)
+//   body
+//       background-position: -1500px
+
+
 
 @import header
 
