--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -1,26 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Special+Elite&display=swap')
+  
 // VARIABLES
 $bp-mobile: 480px
 $bp-tablet: 800px
+
+$font-main: 'Fira Sans', sans-serif
+$font-header: 'Special Elite', cursive
   
   
 *
     box-sizing: border-box
 
+.App
+   display: flex
+   flex-flow: column nowrap
+
 body 
   text-align: center
   color: white
   background-color: rgb(39, 51, 107)
-  background: url('../Media/Nupar.jpg') center 
+  background: linear-gradient(rgba(39, 51, 107, 0.5), rgba(39, 51, 107, 0.5)), url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
   background-size: 400vh auto
   background-position: 63.5% 
-// @media (max-width: $bp-mobile)
-//   body
-//       background-position: -2800px
-// @media (max-width: $bp-tablet)
-//   body
-//       background-position: -1500px
+
 
 
 
