--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -23,7 +23,8 @@ body
   background-repeat: no-repeat
   object-fit: contain
   background-size: 400vh auto
-  background-position: 63.5% 
+  background-position-x: 63.5% 
+  background-position-y: 55%
 
 
 
@@ -31,3 +32,5 @@ body
 @import header
 
 @import hero
+
+@import footer
