--- a/src/Style/_header.sass
+++ b/src/Style/_header.sass
@@ -1,8 +1,9 @@
 .header
-    position: fixed
-    top: 0
+    flex: 0 0 90px
     width: 100%
     // background: black
+    li 
+    font-family: $font-header
     
 .headerContainer
     display: flex
@@ -25,8 +26,7 @@
         font-size: 2rem
         padding-top: 10px
 
-li 
-    font-family: $font-header
+
 
 #menuToggle
     display: block
