--- a/src/Style/_hero.sass
+++ b/src/Style/_hero.sass
@@ -1,8 +1,10 @@
 .hero
-    flex: 1 1 auto
+    margin-top: 90px
+    flex: 1 0 100%
     text-align: left
     padding-left: 15px
     padding-top: 25px
+    border: 3px solid black
     h1
         font-family: $font-header
         font-size: 2.5rem
