--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -21,6 +21,7 @@ body {
 }
 
 .header {
+  height: 90px;
   flex: 0 0 90px;
   width: 100%;
   font-family: "Special Elite", cursive;
@@ -140,8 +141,9 @@ body {
 }
 
 .hero {
-  margin-top: 90px;
-  flex: 1 0 100%;
+  flex: 1 1 auto;
+  width: 100vw;
+  height: 80vh;
   text-align: left;
   padding-left: 15px;
   padding-top: 25px;
@@ -162,7 +164,7 @@ body {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  flex: 0 0 160px;
+  flex: 0 0 100px;
 }
 .footer .titleContainer {
   display: block;
