--- a/src/Style/_hero.sass
+++ b/src/Style/_hero.sass
@@ -1,6 +1,8 @@
 .hero
-    margin-top: 90px
-    flex: 1 0 100%
+    // margin-top: 90px
+    flex: 1 1 auto
+    width: 100vw
+    height: 80vh
     text-align: left
     padding-left: 15px
     padding-top: 25px
