--- a/src/Style/_hero.sass
+++ b/src/Style/_hero.sass
@@ -6,7 +6,7 @@
     text-align: left
     padding-left: 15px
     padding-top: 25px
-    border: 3px solid black
+    // border: 3px solid black
     h1
         font-family: $font-header
         font-size: 2.5rem
