--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -22,9 +22,10 @@ body
   background: linear-gradient(rgba(39, 51, 107, 0.5), rgba(39, 51, 107, 0.5)), url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
+  background-attachment: fixed
   background-size: 400vh auto
   background-position-x: 63.5% 
-  background-position-y: 55%
+  background-position-y: 70%
 
 
 
