--- a/src/Style/_contact.sass
+++ b/src/Style/_contact.sass
@@ -1,6 +1,6 @@
 .contactText
     padding: 100px 100px 
     transform: skew(-10deg)
-    transition: 800ms ease-in
+    transition: 800ms cubic-bezier(.83,.04,.24,.87)
     &:hover
         transform: skew(10deg)
