--- a/src/Style/_hero.sass
+++ b/src/Style/_hero.sass
@@ -2,16 +2,16 @@
     // margin-top: 90px
     flex: 1 1 auto
     width: 100vw
-    height: 80vh
+    height: calc(100vh - 90px)
     text-align: left
-    padding-left: 15px
-    padding-top: 25px
+    padding-left: 70px
+    padding-top: 130px
     h1
         font-family: $font-header
-        font-size: 2.5rem
+        font-size: 2.8rem
 
     h2
         font-family: $font-main
-        font-size: 1.5rem
+        font-size: 1.8rem
         padding-top: 10px
         padding-bottom: 30px
