--- a/src/Style/_work.sass
+++ b/src/Style/_work.sass
@@ -1,1 +1,5 @@
-@import "react-alice-carousel/lib/scss/alice-carousel.scss";
+// @import "react-alice-carousel/lib/scss/alice-carousel.scss"
+
+.carouselImg 
+    height: 200px
+    width: auto
