--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans&family=Special+Elite&display=swap");
+/* @import "react-alice-carousel/lib/css/alice-carousel.css"; */
 * {
   box-sizing: border-box;
 }
