--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -162,6 +162,12 @@ body {
   padding-bottom: 30px;
 }
 
+.work h3 {
+  font-family: "Special Elite", cursive;
+  font-size: 2rem;
+  margin-bottom: 30px;
+}
+
 .imageSlider {
   position: relative;
   height: 55vh;
@@ -176,6 +182,7 @@ body {
   position: absolute;
   top: 60%;
   left: 23px;
+  padding: 3px 10px;
   font-size: 2rem;
   cursor: pointer;
   user-select: none;
@@ -184,9 +191,19 @@ body {
   position: absolute;
   top: 60%;
   right: 23px;
+  padding: 3px 10px;
   font-size: 2rem;
   cursor: pointer;
   user-select: none;
+}
+.imageSlider .slide {
+  opacity: 0;
+  transition: 1s ease-in-out;
+}
+.imageSlider .slide.active {
+  opacity: 1;
+  transition: 1s;
+  transform: scale(1.05);
 }
 
 .clickthrough {
