--- a/src/Style/_imageslider.sass
+++ b/src/Style/_imageslider.sass
@@ -1,6 +1,9 @@
 .imageSlider
     position: relative
-    height: 55vh
+    height: 300px
+    width: 400px
+    margin: 20px auto
+    padding: 20px
     display: flex
     justify-content: center
     align-content: center
@@ -8,16 +11,16 @@
         height: 200px
     .prevArrow
         position: absolute
-        top: 60%
-        left: 23px
+        top: 75%
+        left: 10px
         padding: 3px 10px
         font-size: 2rem
         cursor: pointer
         user-select: none
     .nextArrow
         position: absolute
-        top: 60%
-        right: 23px
+        top: 75%
+        right: 10px
         padding: 3px 10px
         font-size: 2rem
         cursor: pointer
