--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -170,7 +170,10 @@ body {
 
 .imageSlider {
   position: relative;
-  height: 55vh;
+  height: 300px;
+  width: 400px;
+  margin: 20px auto;
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -180,8 +183,8 @@ body {
 }
 .imageSlider .prevArrow {
   position: absolute;
-  top: 60%;
-  left: 23px;
+  top: 75%;
+  left: 10px;
   padding: 3px 10px;
   font-size: 2rem;
   cursor: pointer;
@@ -189,8 +192,8 @@ body {
 }
 .imageSlider .nextArrow {
   position: absolute;
-  top: 60%;
-  right: 23px;
+  top: 75%;
+  right: 10px;
   padding: 3px 10px;
   font-size: 2rem;
   cursor: pointer;
