--- a/src/Style/_work.sass
+++ b/src/Style/_work.sass
@@ -1,5 +1,10 @@
 .work 
+    background: $color-theme-trans
+    margin-top: 30px
+    margin-bottom: 20px
+    padding-top: 30px
+    padding-bottom: 30px
     h3
         font-family: $font-header
-        font-size: 2rem
+        font-size: 2.2rem
         margin-bottom: 30px
