--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -146,20 +146,43 @@ body {
   width: 100vw;
   height: calc(100vh - 90px);
   text-align: left;
-  padding-left: 70px;
+  padding-left: 50px;
+  padding-right: 20px;
   padding-top: 130px;
 }
 .hero h1 {
   font-family: "Special Elite", cursive;
-  font-size: 2.8rem;
+  font-size: 2.5rem;
 }
 .hero h2 {
   font-family: "Fira Sans", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   padding-top: 10px;
   padding-bottom: 30px;
 }
 
+@media (min-width: 480px) {
+  .hero {
+    padding-left: 70px;
+  }
+  .hero h1 {
+    font-size: 2.8rem;
+  }
+  .hero h2 {
+    font-size: 1.8rem;
+  }
+}
+@media (min-width: 800px) {
+  .hero {
+    padding-left: 120px;
+  }
+  .hero h1 {
+    font-size: 3rem;
+  }
+  .hero h2 {
+    font-size: 2rem;
+  }
+}
 .work {
   background: rgba(39, 51, 107, 0.5);
   margin-top: 30px;
@@ -218,6 +241,37 @@ body {
   opacity: 1;
   transition: 1s;
   transform: scale(1.05);
+}
+.imageSlider .vistSite {
+  display: inline-block;
+  background: #f0f0f0;
+  font-family: "Fira Sans", sans-serif;
+  padding: 10px;
+  color: #282828;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  top: 50%;
+  transition: 0.5s;
+}
+.imageSlider .siteHover {
+  transition: 0.5s;
+}
+.imageSlider .siteHover .vistSite {
+  opacity: 0;
+}
+.imageSlider .siteHover .imageHover {
+  opacity: 1;
+}
+.imageSlider:hover .vistSite {
+  opacity: 1;
+}
+.imageSlider:hover .imageHover {
+  opacity: 0.4;
+}
+.imageSlider a {
+  cursor: pointer;
 }
 
 .clickthrough {
