--- a/src/Style/_hero.sass
+++ b/src/Style/_hero.sass
@@ -4,14 +4,31 @@
     width: 100vw
     height: calc(100vh - 90px)
     text-align: left
-    padding-left: 70px
+    padding-left: 50px
+    padding-right: 20px
     padding-top: 130px
     h1
         font-family: $font-header
-        font-size: 2.8rem
+        font-size: 2.5rem
 
     h2
         font-family: $font-main
-        font-size: 1.8rem
+        font-size: 1.5rem
         padding-top: 10px
         padding-bottom: 30px
+
+@media (min-width: $bp-mobile)
+    .hero
+        padding-left: 70px
+        h1
+            font-size: 2.8rem
+        h2
+            font-size: 1.8rem
+
+@media (min-width: $bp-tablet)
+    .hero 
+        padding-left: 120px
+        h1
+            font-size: 3rem
+        h2
+            font-size: 2rem
