--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -202,9 +202,13 @@ body {
   margin-bottom: 15px;
 }
 
+a {
+  cursor: pointer;
+}
+
 .imageSlider {
   position: relative;
-  height: auto;
+  object-fit: contain;
   width: 300px;
   margin: 0 auto 30px auto;
   display: flex;
@@ -214,6 +218,10 @@ body {
 }
 .imageSlider .image {
   height: 150px;
+  width: auto;
+  display: relative;
+  opacity: 1;
+  transition: 0.5s ease;
 }
 .imageSlider .prevArrow {
   position: absolute;
@@ -242,38 +250,23 @@ body {
   transition: 1s;
   transform: scale(1.05);
 }
-.imageSlider .vistSite {
-  display: inline-block;
-  background: #f0f0f0;
-  font-family: "Fira Sans", sans-serif;
-  padding: 10px;
-  color: #282828;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-  top: 50%;
-  transition: 0.5s;
-}
-.imageSlider .siteHover {
-  transition: 0.5s;
-}
-.imageSlider .siteHover .vistSite {
-  opacity: 0;
-}
-.imageSlider .siteHover .imageHover {
-  opacity: 1;
-}
-.imageSlider:hover .vistSite {
-  opacity: 1;
-}
-.imageSlider:hover .imageHover {
-  opacity: 0.4;
-}
-.imageSlider a {
-  cursor: pointer;
-}
 
+@media (min-width: 480px) {
+  .imageSlider {
+    width: 400px;
+  }
+  .imageSlider .image {
+    height: 200px;
+  }
+  .imageSlider .prevArrow {
+    top: 40%;
+    left: -20px;
+  }
+  .imageSlider .nextArrow {
+    top: 40%;
+    right: -20px;
+  }
+}
 .clickthrough {
   margin: 20px auto;
 }
