--- a/src/Style/_footer.sass
+++ b/src/Style/_footer.sass
@@ -2,11 +2,18 @@
     display: flex
     flex-flow: column nowrap
     justify-content: center
-    flex: 0 0 100px
+    align-content: center
+    height: 120px
     .titleContainer
         display: block
         text-align: center
+        margin-bottom: 20px
         h4    
             font-family: $font-header
-            font-size: 1.2rem
+            font-size: 1.5rem
             text-align: center
+
+        .icon
+            height: 50px
+            color: $color-font
+            margin: 10px
