work on about and contact, links added

--- a/src/Style/_about.sass
+++ b/src/Style/_about.sass
@@ -1,6 +1,6 @@
-.aboutText 
-    padding: 100px 100px 
-    transform: skew(-10deg)
-    transition: 800ms cubic-bezier(.83,.04,.24,.87)
-    &:hover
-        transform: skew(10deg)
+// .aboutText 
+//     padding: 100px 100px 
+//     transform: skew(-10deg)
+//     transition: 800ms cubic-bezier(.83,.04,.24,.87)
+//     &:hover
+//         transform: skew(10deg)
