--- a/src/Style/_about.sass
+++ b/src/Style/_about.sass
@@ -1,6 +1,15 @@
-// .aboutText 
-//     padding: 100px 100px 
-//     transform: skew(-10deg)
-//     transition: 800ms cubic-bezier(.83,.04,.24,.87)
-//     &:hover
-//         transform: skew(10deg)
+.about 
+    height: auto
+    background: $color-theme-trans
+    padding: 30px 
+    h2
+        font-family: $font-header
+        font-size: 1.5rem
+        padding-bottom: 20px
+    .aboutText
+        text-align: left
+        padding: 0 30px
+        line-height: 1.4
+        p
+            font-family: $font-main
+        
