--- a/src/Style/_about.sass
+++ b/src/Style/_about.sass
@@ -4,7 +4,7 @@
     padding: 30px 
     h2
         font-family: $font-header
-        font-size: 1.5rem
+        font-size: 1.8em
         padding-bottom: 20px
     .aboutText
         text-align: left
