--- a/src/Style/_footer.sass
+++ b/src/Style/_footer.sass
@@ -1,19 +1,29 @@
 .footer 
+    box-sizing: border-box
     display: flex
     flex-flow: column nowrap
     justify-content: center
     align-content: center
     height: 120px
+    padding-top: 40px
     .titleContainer
         display: block
         text-align: center
         margin-bottom: 20px
         h4    
+            display: inline-block
             font-family: $font-header
             font-size: 1.5rem
             text-align: center
+            padding: 10px 10px 6px 10px
+            border: 2px transparent solid
 
         .icon
             height: 50px
             color: $color-font
             margin: 10px
+        .nameLink
+            text-decoration: none
+            color: $color-font
+        &:hover h4
+            border: 2px $color-font solid
