--- a/src/Style/_about.sass
+++ b/src/Style/_about.sass
@@ -12,4 +12,23 @@
         line-height: 1.4
         p
             font-family: $font-main
-        
+.centerBtn
+    text-align: center
+.resumeLink
+    margin: 0 auto
+    text-decoration: none
+    color: $color-font
+    font-family: $font-main
+    padding: 8px
+    border: 2px transparent solid
+.resumeLink:hover
+    border: 2px $color-font solid
+
+.contactLink
+    color: $color-font
+
+@media (min-width: $bp-tablet)
+    .aboutText 
+        width: 500px
+        margin: 0 auto
+            
