--- a/src/Style/_header.sass
+++ b/src/Style/_header.sass
@@ -1,5 +1,5 @@
 .header
-    position: sticky
+    // position: sticky
     top: 0
     height: 90px
     flex: 0 0 90px
@@ -38,6 +38,7 @@
     z-index: 1
     -webkit-user-select: none
     user-select: none
+    z-index: 100
 
 
 #menuToggle a
@@ -47,7 +48,7 @@
 
 
 #menuToggle a:hover
-    color: tomato
+    text-decoration: underline
 
 
 #menuToggle input
