--- a/src/Style/_imageslider.sass
+++ b/src/Style/_imageslider.sass
@@ -8,7 +8,6 @@ a
 
 .imageSlider
     position: relative
-    // height: auto
     object-fit: contain
     width: 300px
     margin: 0 auto 30px auto
@@ -30,6 +29,7 @@ a
         font-size: 2rem
         cursor: pointer
         user-select: none
+        z-index: 10
     .nextArrow
         position: absolute
         top: 40%
@@ -38,6 +38,7 @@ a
         font-size: 2rem
         cursor: pointer
         user-select: none
+        z-index: 10
     .slide
         opacity: 0
         transition: 1s ease-in-out
