--- a/src/Style/_contact.sass
+++ b/src/Style/_contact.sass
@@ -1,6 +1,21 @@
-.contactText
-    padding: 100px 100px 
-    transform: skew(-10deg)
-    transition: 800ms cubic-bezier(.83,.04,.24,.87)
-    &:hover
-        transform: skew(10deg)
+.contact
+    width: 100vw
+    height: calc(100vh - 210px)
+    // height: 100vh
+    background: $color-theme-trans
+    padding: 30px
+    h2
+        font-family: $font-header
+        font-size: 2rem
+    .emailMe
+        font-family: $font-header
+        text-decoration: none
+        color: $color-font
+
+
+// .contactText
+//     padding: 100px 100px 
+//     transform: skew(-10deg)
+//     transition: 800ms cubic-bezier(.83,.04,.24,.87)
+//     &:hover
+//         transform: skew(10deg)
