--- a/src/Style/_hero.sass
+++ b/src/Style/_hero.sass
@@ -9,19 +9,46 @@
     padding-top: 130px
     h1
         font-family: $font-header
-        font-size: 2.5rem
-
+        font-size: 3rem
     h2
         font-family: $font-main
         font-size: 1.5rem
         padding-top: 10px
         padding-bottom: 30px
+.lineOne
+    animation: typingOne 3s steps(7)
+    overflow: hidden
+    width: 7ch
+@keyframes typingOne
+    0%
+        width: 0ch  
+    100%
+        width: 7ch
+.lineTwo
+    animation: typingTwo 3s steps(6)
+    overflow: hidden
+    width: 6ch
+@keyframes typingTwo
+    0%
+        width: 0ch  
+    100%
+        width: 6ch  
+.lineThree
+    animation: typingThree 3s steps(6)
+    overflow: hidden
+    width: 6ch
+@keyframes typingThree
+    0%
+        width: 0ch  
+    100%
+        width: 6ch  
+
 
 @media (min-width: $bp-mobile)
     .hero
         padding-left: 70px
         h1
-            font-size: 2.8rem
+            font-size: 3.5rem
         h2
             font-size: 1.8rem
 
@@ -29,6 +56,6 @@
     .hero 
         padding-left: 120px
         h1
-            font-size: 3rem
+            font-size: 4rem
         h2
             font-size: 2rem
