--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -162,45 +162,48 @@ body {
 }
 
 .lineOne {
-  animation: typingOne 3s steps(7);
+  animation: slideInOne 1.5s ease-out;
   overflow: hidden;
-  width: 7ch;
 }
 
-@keyframes typingOne {
+@keyframes slideInOne {
   0% {
-    width: 0ch;
+    padding-left: 100%;
   }
   100% {
-    width: 7ch;
+    padding-left: 0;
   }
 }
 .lineTwo {
-  animation: typingTwo 3s steps(6);
+  animation: slideInTwo 3s ease-out;
   overflow: hidden;
-  width: 6ch;
 }
 
-@keyframes typingTwo {
+@keyframes slideInTwo {
   0% {
-    width: 0ch;
+    padding-left: 100%;
+  }
+  33% {
+    padding-left: 100%;
   }
   100% {
-    width: 6ch;
+    padding-left: 0;
   }
 }
 .lineThree {
-  animation: typingThree 3s steps(6);
+  animation: slideInThree 4.5s ease-out;
   overflow: hidden;
-  width: 6ch;
 }
 
-@keyframes typingThree {
+@keyframes slideInThree {
   0% {
-    width: 0ch;
+    padding-left: 100%;
+  }
+  50% {
+    padding-left: 100%;
   }
   100% {
-    width: 6ch;
+    padding-left: 0;
   }
 }
 @media (min-width: 480px) {
