--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -230,7 +230,7 @@ body {
 }
 .work {
   background: rgba(39, 51, 107, 0.5);
-  margin-top: 30px;
+  margin-top: 5px;
   margin-bottom: 20px;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -240,7 +240,24 @@ body {
   font-size: 2.2rem;
   margin-bottom: 30px;
 }
+.work h4 {
+  font-family: "Special Elite", cursive;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
 
+.workFllex {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 800px) {
+  .workFlex {
+    flex-flow: row wrap;
+  }
+}
 .workTitle {
   font-family: "Special Elite", cursive;
   font-size: 1.8;
@@ -386,8 +403,9 @@ a {
   flex-flow: column nowrap;
   justify-content: center;
   align-content: center;
-  height: 120px;
+  height: 100px;
   padding-top: 40px;
+  padding-bottom: 20px;
 }
 .footer .titleContainer {
   display: block;
