--- a/src/Style/_footer.sass
+++ b/src/Style/_footer.sass
@@ -4,8 +4,9 @@
     flex-flow: column nowrap
     justify-content: center
     align-content: center
-    height: 120px
+    height: 100px
     padding-top: 40px
+    padding-bottom: 20px
     .titleContainer
         display: block
         text-align: center
