--- a/src/Style/_work.sass
+++ b/src/Style/_work.sass
@@ -1,6 +1,6 @@
 .work 
     background: $color-theme-trans
-    margin-top: 30px
+    margin-top: 5px
     margin-bottom: 20px
     padding-top: 30px
     padding-bottom: 30px
@@ -8,3 +8,19 @@
         font-family: $font-header
         font-size: 2.2rem
         margin-bottom: 30px
+    h4
+        font-family: $font-header
+        font-size: 1.2rem
+        margin-bottom: 20px
+.workFllex 
+    display: flex
+    flex-flow: column nowrap
+    justify-content: center
+    align-items: center
+.workContainer
+    // width: 450px
+
+@media (min-width: $bp-tablet)
+    .workFlex
+        flex-flow: row wrap
+    
