--- a/src/Style/_imageslider.sass
+++ b/src/Style/_imageslider.sass
@@ -1,7 +1,7 @@
-.workTitle
-    font-family: $font-header
-    font-size: 1.8
-    margin-bottom: 15px
+// .workTitle
+//     font-family: $font-header
+//     font-size: 1.8
+//     margin-bottom: 15px
 
 a
     cursor: pointer
