--- a/src/Style/_work.sass
+++ b/src/Style/_work.sass
@@ -15,10 +15,10 @@
 .workFllex 
     display: flex
     flex-flow: column nowrap
-    justify-content: center
+    justify-content: flex-start
     align-items: center
 .workContainer
-    // width: 450px
+    width: 450px
 
 @media (min-width: $bp-tablet)
     .workFlex
