--- a/src/Style/_about.sass
+++ b/src/Style/_about.sass
@@ -24,6 +24,9 @@
 .resumeLink:hover
     border: 2px $color-font solid
 
+.linkedInLink
+    color: $color-font
+
 .contactLink
     color: $color-font
 
