--- a/src/Style/_header.sass
+++ b/src/Style/_header.sass
@@ -6,7 +6,7 @@
     width: 100%
     // background: black
     li 
-    font-family: $font-header
+        font-family: $font-header
     
 .headerContainer
     display: flex
@@ -22,11 +22,17 @@
     width: 60px
     margin: 15px
     border: 2px solid white
+    color: $color-font
+    
     p  
         font-family: $font-header
         align-self: center
         font-size: 2rem
         padding-top: 10px
+
+.homeLink
+    text-decoration: none
+
 
 
 
