--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -344,7 +344,7 @@ a {
 .about {
   height: auto;
   background: rgba(39, 51, 107, 0.5);
-  padding: 30px;
+  padding: 50px 30px;
 }
 .about h2 {
   font-family: "Special Elite", cursive;
@@ -362,6 +362,7 @@ a {
 
 .centerBtn {
   text-align: center;
+  margin-top: 10px;
 }
 
 .resumeLink {
@@ -413,8 +414,8 @@ a {
   flex-flow: column nowrap;
   justify-content: center;
   align-content: center;
-  height: 100px;
-  padding-top: 40px;
+  height: auto;
+  padding-top: 30px;
   padding-bottom: 20px;
 }
 .footer .titleContainer {
