--- a/src/Style/_about.sass
+++ b/src/Style/_about.sass
@@ -1,7 +1,7 @@
 .about 
     height: auto
     background: $color-theme-trans
-    padding: 30px 
+    padding: 50px 30px
     h2
         font-family: $font-header
         font-size: 2em
@@ -14,6 +14,7 @@
             font-family: $font-main
 .centerBtn
     text-align: center
+    margin-top: 10px
 .resumeLink
     margin: 0 auto
     text-decoration: none
