--- a/src/Style/_footer.sass
+++ b/src/Style/_footer.sass
@@ -4,8 +4,8 @@
     flex-flow: column nowrap
     justify-content: center
     align-content: center
-    height: 100px
-    padding-top: 40px
+    height: auto
+    padding-top: 30px
     padding-bottom: 20px
     .titleContainer
         display: block
