--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -237,11 +237,10 @@ body {
   }
 }
 .work {
-  background: rgba(39, 51, 107, 0.5);
   margin-top: 5px;
   margin-bottom: 20px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .work h3 {
   font-family: "Special Elite", cursive;
@@ -251,23 +250,70 @@ body {
 .work h4 {
   font-family: "Special Elite", cursive;
   font-size: 1.2rem;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
-.workFllex {
+.workFlex {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center;
 }
 
 .workContainer {
-  width: 450px;
+  margin: 30px auto;
 }
 
+.workImg {
+  width: 300px;
+}
+
+.wrapImage {
+  position: relative;
+}
+.wrapImage::before, .wrapImage::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  border: 2px solid #f0f0f0;
+  transition: all 0.25s ease-out;
+}
+.wrapImage::before {
+  background-color: #f0f0f0;
+  top: -10px;
+  left: -10px;
+}
+.wrapImage::after {
+  bottom: -10px;
+  right: -10px;
+}
+.wrapImage:hover::before {
+  top: 15px;
+  left: 15px;
+}
+.wrapImage:hover::after {
+  bottom: 15px;
+  right: 15px;
+}
+
+@media (min-width: 480px) {
+  .workImg {
+    width: 420px;
+  }
+}
 @media (min-width: 800px) {
   .workFlex {
     flex-flow: row wrap;
+    justify-content: space-around;
+  }
+
+  .workContainer {
+    margin: 30px 40px 30px 30px;
+  }
+
+  .workImg {
+    width: 500px;
   }
 }
 a {
