--- a/src/Style/_workdisplay.sass
+++ b/src/Style/_workdisplay.sass
@@ -8,11 +8,15 @@
         padding-bottom: 20px
     .workDisplayText
         text-align: left
-        padding: 0 30px
+        padding: 0 30px 30px 30px
         line-height: 1.4
         font-family: $font-main
+    h4
+        font-family: $font-header
+        font-size: 1.5em
+        padding: 15px
     .techsList
-        text-align: left
+        text-align: center
         padding: 0 30px
         line-height: 1.4
         font-family: $font-main
@@ -22,5 +26,7 @@
     .workDisplayText 
         width: 500px
         margin: 0 auto
-        
+    .techsList
+        width: 500px
+        margin: 0 auto
             
