flex layout for desktop on work pages

--- a/src/Style/_imageslider.sass
+++ b/src/Style/_imageslider.sass
@@ -76,5 +76,11 @@ a
             top: 40%
             right: -20px
 
+@media (min-width: 1000px)
+    .imageSlider
+        width: 500px
+        .image 
+            height: 250px
+
     
 
