--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -318,8 +318,9 @@ body {
 }
 .workDisplay {
   height: auto;
+  width: 100vw;
   background: rgba(39, 51, 107, 0.5);
-  padding: 50px 30px;
+  padding: 50px 30px 30px 30px;
 }
 .workDisplay h2 {
   font-family: "Special Elite", cursive;
@@ -344,6 +345,29 @@ body {
   font-family: "Fira Sans", sans-serif;
 }
 
+.iframeContainer {
+  position: relative;
+  overflow: hidden;
+  width: 300px;
+  margin: 15px auto;
+  aspect-ratio: 16/9;
+}
+
+.responsiveIframe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-width: 480px) {
+  .iframeContainer {
+    width: 400px;
+  }
+}
 @media (min-width: 800px) {
   .workDisplayText {
     width: 500px;
@@ -353,6 +377,44 @@ body {
   .techsList {
     width: 500px;
     margin: 0 auto;
+  }
+}
+@media (min-width: 1000px) {
+  .workDisplayFlex {
+    margin: 0 auto;
+    max-width: 1300px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .workDisplayText {
+    margin: 10px;
+    order: 0;
+  }
+
+  .iframeContainer {
+    margin: 10px;
+    width: 400px;
+    margin: 0;
+    order: 1;
+  }
+
+  .techContainer {
+    margin: auto 0;
+    width: 400px;
+    order: 4;
+  }
+
+  .techsList {
+    width: 400px;
+  }
+
+  .imageSliderContainer {
+    margin: 20px;
+    order: 3;
+    width: 500px;
   }
 }
 a {
@@ -420,6 +482,14 @@ a {
   .imageSlider .nextArrow {
     top: 40%;
     right: -20px;
+  }
+}
+@media (min-width: 1000px) {
+  .imageSlider {
+    width: 500px;
+  }
+  .imageSlider .image {
+    height: 250px;
   }
 }
 .clickthrough {
