--- a/src/Style/_workdisplay.sass
+++ b/src/Style/_workdisplay.sass
@@ -1,7 +1,8 @@
 .workDisplay
     height: auto
+    width: 100vw
     background: $color-theme-trans
-    padding: 50px 30px
+    padding: 50px 30px 30px 30px
     h2
         font-family: $font-header
         font-size: 2em
@@ -20,6 +21,26 @@
         padding: 0 30px
         line-height: 1.4
         font-family: $font-main
+    
+.iframeContainer
+    position: relative
+    overflow: hidden
+    width: 300px
+    margin: 15px auto        
+    // width: 100%
+    aspect-ratio: 16/9
+.responsiveIframe
+    position: absolute
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 100%
+
+@media (min-width: $bp-mobile)
+    .iframeContainer
+        width: 400px
 
 
 @media (min-width: $bp-tablet)
@@ -29,4 +50,30 @@
     .techsList
         width: 500px
         margin: 0 auto
-            
+
+@media (min-width: 1000px)
+    .workDisplayFlex
+        margin: 0 auto
+        max-width: 1300px
+        display: flex
+        flex-flow: row wrap
+        justify-content: center
+        align-items: flex-start
+    .workDisplayText
+        margin: 10px
+        order: 0
+    .iframeContainer
+        margin: 10px
+        width: 400px
+        margin: 0
+        order: 1
+    .techContainer
+        margin: auto 0
+        width: 400px
+        order: 4
+    .techsList
+        width: 400px
+    .imageSliderContainer
+        margin: 20px
+        order: 3    
+        width: 500px
