--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -170,7 +170,7 @@ body {
 }
 
 .lineOne {
-  animation: slideInOne 1.5s ease-out;
+  animation: slideInOne 1.5s cubic-bezier(0.35, 1.15, 0.72, 0.99);
   overflow: hidden;
 }
 
@@ -183,7 +183,7 @@ body {
   }
 }
 .lineTwo {
-  animation: slideInTwo 3s ease-out;
+  animation: slideInTwo 3s cubic-bezier(0.35, 1.15, 0.72, 0.99);
   overflow: hidden;
 }
 
@@ -199,7 +199,7 @@ body {
   }
 }
 .lineThree {
-  animation: slideInThree 4.5s ease-out;
+  animation: slideInThree 4.5s cubic-bezier(0.35, 1.15, 0.72, 0.99);
   overflow: hidden;
 }
 
