--- a/src/Style/_header.sass
+++ b/src/Style/_header.sass
@@ -1,4 +1,4 @@
-.header
+.header 
     // position: sticky
     top: 0
     height: 90px
@@ -23,7 +23,6 @@
     margin: 15px
     border: 2px solid white
     color: $color-font
-    
     p  
         font-family: $font-header
         align-self: center
@@ -32,9 +31,6 @@
 
 .homeLink
     text-decoration: none
-
-
-
 
 #menuToggle
     display: block
@@ -46,16 +42,13 @@
     user-select: none
     z-index: 100
 
-
 #menuToggle a
     text-decoration: none
     color: #232323
     transition: color 0.3s ease
 
-
 #menuToggle a:hover
     text-decoration: underline
-
 
 #menuToggle input
     display: block
@@ -69,7 +62,6 @@
     z-index: 2
     -webkit-touch-callout: none
 
-
 #menuToggle span
     display: block
     width: 33px
@@ -77,37 +69,29 @@
     margin-bottom: 8px
     position: relative
     background: white
-    // border-radius: 3px
     z-index: 1
     transform-origin: 4px 0px
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease
 
-
 #menuToggle span:first-child
     transform-origin: 0% 0%
 
-
 #menuToggle span:nth-last-child(2)
     transform-origin: 0% 100%
-
 
 #menuToggle input:checked ~ span
     opacity: 1
     transform: rotate(45deg) translate(-2px, 0px)
     background: #232323
 
-
 #menuToggle input:checked ~ span:nth-last-child(3)
     opacity: 0
     transform: rotate(0deg) scale(0.2, 0.2)
 
-
-
 #menuToggle input:checked ~ span:nth-last-child(2)
     transform: rotate(-45deg) translate(0, -2px)
 
-
-#menu
+#menuDrop
     position: absolute
     width: 170px
     margin: -100px 0 0 -105px
@@ -121,12 +105,28 @@
     transform: translate(0, -100%)
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
 
-
-#menu li
+#menuDrop li
     padding: 10px 0
     font-size: 22px
 
-
-
 #menuToggle input:checked ~ ul
     transform: none
+
+#menuBar
+    display: none
+
+@media (min-width: $bp-tablet)
+    #menuDrop 
+        display: none
+    #menuToggle
+        display: none
+    #menuBar
+        display: flex
+    #menuBar a
+        display: inline-block
+        text-decoration: none
+        color: $color-font
+        font-size: 1.5rem
+        margin: 35px 15px 15px 15px
+    #menuBar a:hover
+        text-decoration: underline
