--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -26,7 +26,7 @@ body
   background-repeat: no-repeat
   object-fit: contain
   background-attachment: fixed
-  background-size: 400vh auto
+  background-size: 200vh 
   background-position-x: 63.5% 
   background-position-y: 70%
 
