--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -25,8 +25,9 @@ body
   background: linear-gradient($color-theme-trans, $color-theme-trans), url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
+  overflow: hidden
   background-attachment: fixed
-  background-size: 200vh 
+  background-size: 300vh auto
   background-position-x: 63.5% 
   background-position-y: 70%
 
