--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -25,6 +25,7 @@ body
   background: linear-gradient($color-theme-trans, $color-theme-trans), url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
+  background-origin: border-box
   background-attachment: fixed
   background-size: 300vh auto
   background-position-x: 63.5% 
