--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -25,9 +25,13 @@ body
   background: linear-gradient($color-theme-trans, $color-theme-trans), url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
+  // padding-bottom: 65.89%
   background-origin: border-box
   background-attachment: fixed
-  background-size: 450vh auto
+  background-size: cover
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
   background-position-x: 64.5% 
   background-position-y: 70%
 
