--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -28,10 +28,10 @@ body
   // padding-bottom: 65.89%
   background-origin: border-box
   background-attachment: fixed
-  background-size: cover
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  -o-background-size: cover
+  background-size: 300vh auto
+  -webkit-background-size: 300vh auto
+  -moz-background-size: 300vh auto
+  -o-background-size: 300vh auto
   background-position-x: 64.5% 
   background-position-y: 70%
 
