--- a/src/Style/Style.sass
+++ b/src/Style/Style.sass
@@ -9,7 +9,7 @@ $font-header: 'Special Elite', cursive
 
 $color-font: rgb(240, 240, 240)
 $color-theme: rgb(39, 51, 107)
-$color-theme-trans: rgba(39, 51, 107, 0.5)
+$color-theme-trans: rgba(39, 51, 107, 0.75)
   
   
 *
@@ -22,16 +22,16 @@ $color-theme-trans: rgba(39, 51, 107, 0.5)
 body 
   text-align: center
   color: $color-font
-  background: linear-gradient($color-theme-trans, $color-theme-trans), url('../Media/Nupar.jpg')
+  background: url('../Media/Nupar.jpg')
   background-repeat: no-repeat
   object-fit: contain
   // padding-bottom: 65.89%
   background-origin: border-box
   background-attachment: fixed
-  background-size: 300vh auto
-  -webkit-background-size: 300vh auto
-  -moz-background-size: 300vh auto
-  -o-background-size: 300vh auto
+  background-size: cover
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
   background-position-x: 64.5% 
   background-position-y: 70%
 
