--- a/src/Style/_workdisplay.sass
+++ b/src/Style/_workdisplay.sass
@@ -44,6 +44,8 @@
 
 
 @media (min-width: $bp-tablet)
+    .workDisplay
+        height: calc(100vh - 75px)
     .workDisplayText 
         width: 500px
         margin: 0 auto
